err/pp.core.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/boto'...
Listing './lib/python3.5/site-packages/boto/awslambda'...
Listing './lib/python3.5/site-packages/boto/beanstalk'...
Listing './lib/python3.5/site-packages/boto/cacerts'...
Listing './lib/python3.5/site-packages/boto/cloudformation'...
Listing './lib/python3.5/site-packages/boto/cloudfront'...
Listing './lib/python3.5/site-packages/boto/cloudhsm'...
Listing './lib/python3.5/site-packages/boto/cloudsearch'...
Listing './lib/python3.5/site-packages/boto/cloudsearch2'...
Listing './lib/python3.5/site-packages/boto/cloudsearchdomain'...
Listing './lib/python3.5/site-packages/boto/cloudtrail'...
Listing './lib/python3.5/site-packages/boto/codedeploy'...
Listing './lib/python3.5/site-packages/boto/cognito'...
Listing './lib/python3.5/site-packages/boto/cognito/identity'...
Listing './lib/python3.5/site-packages/boto/cognito/sync'...
Listing './lib/python3.5/site-packages/boto/configservice'...
Listing './lib/python3.5/site-packages/boto/contrib'...
Listing './lib/python3.5/site-packages/boto/datapipeline'...
Listing './lib/python3.5/site-packages/boto/directconnect'...
Listing './lib/python3.5/site-packages/boto/dynamodb'...
Listing './lib/python3.5/site-packages/boto/dynamodb2'...
Listing './lib/python3.5/site-packages/boto/ec2'...
Listing './lib/python3.5/site-packages/boto/ec2/autoscale'...
Listing './lib/python3.5/site-packages/boto/ec2/cloudwatch'...
Listing './lib/python3.5/site-packages/boto/ec2/elb'...
Listing './lib/python3.5/site-packages/boto/ec2containerservice'...
Listing './lib/python3.5/site-packages/boto/ecs'...
Listing './lib/python3.5/site-packages/boto/elasticache'...
Listing './lib/python3.5/site-packages/boto/elastictranscoder'...
Listing './lib/python3.5/site-packages/boto/emr'...
Listing './lib/python3.5/site-packages/boto/file'...
Listing './lib/python3.5/site-packages/boto/fps'...
Listing './lib/python3.5/site-packages/boto/glacier'...
Listing './lib/python3.5/site-packages/boto/gs'...
Listing './lib/python3.5/site-packages/boto/iam'...
Listing './lib/python3.5/site-packages/boto/kinesis'...
Listing './lib/python3.5/site-packages/boto/kms'...
Listing './lib/python3.5/site-packages/boto/logs'...
Listing './lib/python3.5/site-packages/boto/machinelearning'...
Listing './lib/python3.5/site-packages/boto/manage'...
Listing './lib/python3.5/site-packages/boto/mashups'...
Listing './lib/python3.5/site-packages/boto/mturk'...
Listing './lib/python3.5/site-packages/boto/mws'...
Listing './lib/python3.5/site-packages/boto/opsworks'...
Listing './lib/python3.5/site-packages/boto/pyami'...
Listing './lib/python3.5/site-packages/boto/pyami/installers'...
Listing './lib/python3.5/site-packages/boto/pyami/installers/ubuntu'...
Listing './lib/python3.5/site-packages/boto/rds'...
Listing './lib/python3.5/site-packages/boto/rds2'...
Listing './lib/python3.5/site-packages/boto/redshift'...
Listing './lib/python3.5/site-packages/boto/roboto'...
Listing './lib/python3.5/site-packages/boto/route53'...
Listing './lib/python3.5/site-packages/boto/route53/domains'...
Listing './lib/python3.5/site-packages/boto/s3'...
Listing './lib/python3.5/site-packages/boto/sdb'...
Listing './lib/python3.5/site-packages/boto/sdb/db'...
Listing './lib/python3.5/site-packages/boto/sdb/db/manager'...
Listing './lib/python3.5/site-packages/boto/services'...
Listing './lib/python3.5/site-packages/boto/ses'...
Listing './lib/python3.5/site-packages/boto/sns'...
Listing './lib/python3.5/site-packages/boto/sqs'...
Listing './lib/python3.5/site-packages/boto/sts'...
Listing './lib/python3.5/site-packages/boto/support'...
Listing './lib/python3.5/site-packages/boto/swf'...
Listing './lib/python3.5/site-packages/boto/vendored'...
Listing './lib/python3.5/site-packages/boto/vendored/regions'...
Listing './lib/python3.5/site-packages/boto/vpc'...
Listing './lib/python3.5/site-packages/boto-2.48.0.dist-info'...
Listing './lib/python3.5/site-packages/fs'...
Listing './lib/python3.5/site-packages/fs/commands'...
Listing './lib/python3.5/site-packages/fs/contrib'...
Listing './lib/python3.5/site-packages/fs/contrib/bigfs'...
Listing './lib/python3.5/site-packages/fs/contrib/davfs'...
Listing './lib/python3.5/site-packages/fs/contrib/tahoelafs'...
Listing './lib/python3.5/site-packages/fs/expose'...
Listing './lib/python3.5/site-packages/fs/expose/dokan'...
Listing './lib/python3.5/site-packages/fs/expose/fuse'...
Listing './lib/python3.5/site-packages/fs/expose/wsgi'...
Listing './lib/python3.5/site-packages/fs/osfs'...
Listing './lib/python3.5/site-packages/fs/tests'...
Listing './lib/python3.5/site-packages/fs/tests/data'...
Listing './lib/python3.5/site-packages/fs/wrapfs'...
Listing './lib/python3.5/site-packages/fs-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pp'...
Listing './lib/python3.5/site-packages/pp/core'...
Compiling './lib/python3.5/site-packages/pp/core/fslayer.py'...
***   File "./lib/python3.5/site-packages/pp/core/fslayer.py", line 94
    print src.listdir()
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pp/core/samples'...
Listing './lib/python3.5/site-packages/pp/core/tests'...
Listing './lib/python3.5/site-packages/pp/core/tests/example_resource'...
Listing './lib/python3.5/site-packages/pp/core/tests/sampledata'...
Listing './lib/python3.5/site-packages/pp.core-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
